# dapps-w3bstreaming

./: Cargo.toml  Dockerfile  Makefile  package-lock.json
.github /workflows/: docker.yml
.github/workflows/: docker.yml
compiled-contract/: web3streaming.opt.wasm  web3streaming.wasm
contract/: Cargo.toml
contract/io/: Cargo.toml
contract/io/src/: lib.rs
contract/src/: contract.rs  lib.rs
state/: Cargo.toml
state/src/: wasm.rs
