[package]
name = "web3streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07" }
gsys = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07" }
gmeta = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
codec = { package = "parity-scale-codec", version = "3.4", default-features = false }
scale-info = { version = "2", default-features = false }
web3streaming-io = { path = "io" }

[build-dependencies]
web3streaming-io = { path = "io" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07" }