[package]
name = "web3streaming-io"
version = "0.1.0"
edition = "2021"

[dependencies]
gsys = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68" }
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68" }
gmeta = { git = "https://github.com/gear-tech/gear", rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68" }
codec = { package = "parity-scale-codec", version = "3.4", default-features = false }
scale-info = { version = "2", default-features = false }