[package]
name = "web3streaming-io"
version = "0.1.0"
edition = "2021"

[dependencies]
gsys = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07" }
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07" }
gmeta = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
codec = { package = "parity-scale-codec", version = "3.4", default-features = false }
scale-info = { version = "2", default-features = false }